--- a/yandex123/main/static/main/css/main.css
+++ b/yandex123/main/static/main/css/main.css
@@ -7,8 +7,8 @@ body {
 
 #main{
     padding: 300px;
-    background: -webkit-linear-gradient(45deg, #d13881,#ed8f6b,#e8dca4);
-    background: linear-gradient(45deg, #d13881,#ed8f6b,#e8dca4);
+    background: -webkit-linear-gradient(90deg, #a2a49f,#e0d0c4,#f1dac4);
+    background: linear-gradient(90deg, #a2a49f,#e0d0c4,#f1dac4);
     min-height: 100%;
 }
 
