--- a/yandex123/main/templates/main/index.html
+++ b/yandex123/main/templates/main/index.html
@@ -53,7 +53,7 @@
           <h2>Увлечения</h2>
           <p>Увлекаюсь баскетболом, математикой, чтением, изучением чего-то нового</p>
           <h2>Опыт в программировани</h2>
-          <p>Программированием я занимаюсь около трех месяцев, началось все с крусов от Сириуса(<a href="https://edu.sirius.online/certificate_eXy164Xq">Прилагаю сертефикат с одного из пройденных курсов</a>), сейчас продолжаю проходить их в свободное от подготовки к экзаменам время, так же начаинал изучать программирование ботов в telegram на python </p>
+          <p>Программированием я занимаюсь около трех месяцев, началось все с крусов от Сириуса(<a href="https://edu.sirius.online/certificate_eXy164Xq">Прилагаю сертефикат с одного из пройденных курсов</a>), сейчас продолжаю проходить их в свободное от подготовки к экзаменам время. Также изучаю программирование ботов в telegram на python </p>
       </div>
       <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
         <img src="{% static 'main/img/project_photo1.jpg' %}">
