--- a/yandex123/main/templates/main/index.html
+++ b/yandex123/main/templates/main/index.html
@@ -48,12 +48,12 @@
     <div class="row">
       <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
         <h2>Основная информация</h2>
-          <p>Мельчаков Иван Алексеевич, 16 лет</p>
-          <p>Живу в Москве и учусь в 11 классе школы №109</p>
+          <p>Мельчаков Иван Алексеевич, 16 лет.</p>
+          <p>Живу в Москве и учусь в 11 классе школы №109.</p>
           <h2>Увлечения</h2>
-          <p>Увлекаюсь баскетболом, математикой, чтением, изучением чего-то нового</p>
-          <h2>Опыт в программировани</h2>
-          <p>Программированием я занимаюсь около трех месяцев, началось все с крусов от Сириуса(<a href="https://edu.sirius.online/certificate_eXy164Xq">Прилагаю сертефикат с одного из пройденных курсов</a>), сейчас продолжаю проходить их в свободное от подготовки к экзаменам время. Также изучаю программирование ботов в telegram на python </p>
+          <p>Увлекаюсь баскетболом, математикой, чтением, изучением чего-то нового.</p>
+          <h2>Опыт в программировании</h2>
+          <p>Программированием я занимаюсь около трех месяцев, началось все с крусов от Сириуса(<a href="https://edu.sirius.online/certificate_eXy164Xq">Прилагаю сертефикат с одного из пройденных курсов</a>), сейчас продолжаю проходить их в свободное от подготовки к экзаменам время. Также изучаю программирование ботов в telegram на python. </p>
       </div>
       <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
         <img src="{% static 'main/img/project_photo1.jpg' %}">
